gccida/g0/get_inner_reference
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_inner_reference/src/expr.c:5712:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_inner_reference/src/expr.c:5716:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *initial; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_inner_reference/src/expr.c:5717:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_inner_reference/src/expr.c:5718:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_inner_reference/src/expr.c:5719:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_inner_reference/src/expr.c:5720:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_inner_reference/src/expr.c:5721:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_inner_reference/src/expr.c:5735:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+94h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_inner_reference/src/expr.c:5843:25: error: expected expression
&& ( v11 = ( tree_node *)*( &global_trees + 19), 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_inner_reference/src/expr.c:5843:14: error: use of undeclared identifier 'tree_node'
&& ( v11 = ( tree_node *)*( &global_trees + 19), 
             ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_inner_reference/src/obj/expr.o] Error 1
